--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       "react-app/jest"
     ]
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "singleQuote": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
